# biser_par

./: .gitmodules  CMakeLists.txt  Makefile  README.md  run  run_mpi  run_omp  run_ref
include/: algos.hpp
scripts/: .RData  .Rhistory  e.eps  e_mpi.eps  e_omp.eps  run_loop  run_mpi  run_omp  run_ref  s_mpi.eps  s_omp.eps  steady.eps  visualize.r
src/: algos.cxx  parallel_mpi.cxx  parallel_omp.cxx  reference_t1.cxx  steady.cxx  tmp3.cxx
